<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AdvancedCalculatorActivity">

    <TextView
        android:id="@+id/adv_equationTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_bkspButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/backspace"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_cButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/c"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_leftBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/bracket"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_signButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/sign"
                android:textColor="@android:color/holo_orange_dark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_sinButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/sin"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_cosButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/cos"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_tanButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/tan"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_lnButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/ln"
                android:textColor="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_sqrtButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/sqrt"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_x2Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/x_2"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_xyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/x_y"
                android:textColor="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/adv_logButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/log"
                android:textColor="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_sevenButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/seven"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_eightButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/eight"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_nineButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/nine"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_divideButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/divide"
                android:textColor="@android:color/holo_orange_dark" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_fourButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/four"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_fiveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/five"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_sixButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/six"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_multiplyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/multiply"
                android:textColor="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_oneButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/one"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_twoButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/two"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_threeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/three"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_minusButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/minus"
                android:textColor="@android:color/holo_orange_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/adv_zeroButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/zero"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_dotButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/dot"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_equalsButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/equals"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/adv_plusButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="handleButton"
                android:text="@string/plus"
                android:textColor="@android:color/holo_orange_dark" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>